--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -565,7 +565,12 @@
             </div>
             <div class="login-actions">
               <button type="submit" id="login-btn">Увійти</button>
-</div>
+	</div>
+	            <div class="muted" style="margin-top: 10px; line-height: 1.45;">
+	              <div style="font-weight: 600; margin-bottom: 4px;">Демо-доступ:</div>
+	              <div><b>Власник (Owner)</b>: <code>owner@example.com</code> / <code>secret123</code></div>
+	              <div><b>Адміністратор (Admin)</b>: <code>user2@example.com</code> / <code>secret123</code></div>
+	            </div>
             <div class="status" id="login-status"></div>
           </form>
         </div>
